TestSuite/errors/err0126.pas
uses GraphABC;
type TRec = record
a : integer;
b : real;
end;

var 
s : TRec := (a:2;b:2.3; b : 4);
begin
end.